--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit>=1.40.0
-databricks-sdk>=0.35.0
+google-generativeai>=0.8.0
+google-cloud-firestore>=2.16.0
 python-dotenv>=1.0.0
 tenacity>=8.2.0
 plotly>=5.0.0
