Fix GOOGLE_API_KEY deployment to use env_vars instead of GCP secrets map

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,5 +52,4 @@ jobs:
           env_vars: |
             GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }}
             USER_EMAIL=test@example.com
-          secrets: |
-            GOOGLE_API_KEY=GOOGLE_API_KEY:latest
+            GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}
